app/assets/stylesheets/custom.scss
@import "bootstrap";

/* mixins, variables, etc*/
@mixin box_sizing {
  -moz-box-sizing:    border-box;
  -webkit-box-sizing: border-box;
  box-sizing:         border-box;
}


/* universal */

body {
  a, a:hover, a:visited {
  color: #4993EA;
  }
}

section {
  overflow: auto;
}

textarea {
  resize: vertical;
}

.center {
  text-align: center;
}

.center h1 {
  margin-bottom: 10px;
}

header {
    background: #4993EA;
}

.navbar-light {
  .navbar-nav {
     li.nav-item {
       a.nav-link {
         color: #DAE9FA;
       }
      a.nav-link:hover{
        color: #fff;
      }
    }
  }
}


.col{
  border: 1px solid #000;
}

/* typography */

h1, h2, h3, h4, h5, h6 {
  line-height: 1;
}

h1 {
  font-size: 3em;
  letter-spacing: -2px;
  margin-bottom: 30px;
  text-align: center;
}

h2 {
  font-size: 1.2em;
  letter-spacing: -1px;
  margin-bottom: 30px;
  text-align: center;
  font-weight: normal;
  color: #777;
}

p {
  font-size: 1.1em;
  line-height: 1.7em;
}

/* header */

#logo {
  font-family: 'Roboto', sans-serif;
  font-size: 2.5em;
  color: #fff;
  letter-spacing: -1px;
  font-weight: bold;
  padding-left: 45px;
  background: url('/assets/rollcall-logo.svg') no-repeat;
  background-position: left;
  background-size: 30% ;
}

#logo:hover {
  color: #fff;
  text-decoration: none;
}


#launch_signin {
  background: #7FB3F0;
  border: 1px solid #fff;
  padding: 10px 20px;
  border-radius: 3px;
  color: #fff;
}


img {
}

/* sidebar */

aside {
  section.user_info {
    margin-top: 20px;
  }
  section {
    padding: 10px 0;
    margin-top: 20px;
    &:first-child {
      border: 0;
      padding-top: 0;
    }
    span {
      display: block;
      margin-bottom: 3px;
      line-height: 1;
    }
    h1 {
      font-size: 1.4em;
      text-align: left;
      letter-spacing: -1px;
      margin-bottom: 3px;
      margin-top: 0px;
    }
  }
}

.gravatar {
  float: left;
  margin-right: 10px;
}

.gravatar_edit {
  margin-top: 15px;
}


/* forms */

input, textarea, select, .uneditable-input {
  border: 1px solid #bbb;
  width: 100%;
  margin-bottom: 15px;
  @include box_sizing;
}

input {
  height: auto !important;
}

#error_explanation {
  color: red;
  ul {
    color: red;
    margin: 0 0 30px 0;
  }
}

.field_with_errors {
//  @extend .has-error;
  .form-control {
    color: $state-danger-text;
  }
}

.upload{
  border: 0;
  margin: 10px 0 10px 0;
}

.checkbox {
  margin-top: -10px;
  margin-bottom: 10px;
  span {
    margin-left: 20px;
    font-weight: normal;
  }
}

#session_remember_me {
  width: auto;
  margin-left: 0;
}

/* footer */

footer {
  margin-top: 45px;
  padding-top: 5px;
  border-top: 1px solid #eaeaea;
  color: #777;
  a {
    color: #555;
    &:hover {
      color: #222;
    }
  }
  small {
    float: left;
  }
  ul {
  float: right;
  list-style: none;
    li {
      float: left;
      margin-left: 15px;
    }
  }
}

/* Users index */

.users {
  list-style: none;
  margin: 0;
  li {
    overflow: auto;
    padding: 10px 0;
    border-bottom: 1px solid $gray-lighter;
  }
}


/* team members lists */

.team_members_list{
  width: 100%;
  margin: 0 0;
  padding: 0 0;
  tr:nth-child(even) {
    background: #F7F7F7;
  }
  tr {
    a, a:hover, a:visited {
    color: #4993EA;
    }
      em{
        color: #ccc;
        font-style: normal;
      }
      b {
        font-weight: normal;
        color: #53B848;
        text-transform: uppercase;
        margin: 0 0 0 40px;
      }
    }
  td{
    padding: 10px 0;
  }
  .name {
    width: 20%;
    padding-left: 10px;
  }
  .status {
    width: 30%;
    text-align: left;
  }
  .date {
    text-align: right;
    padding-right: 10px;
  }
}

/* search form */


.search_form {
width: 70%;
float: left;
margin: 10px 0 10px 0;
  input{
  width: 100%;
  border: 1px solid #B9D6F7;
  background: #F8FBFE;
  border-radius: 3px;
  padding: 7px 7px;
  color: #B9D6F7;
}
}

.new_teammember{
  margin: 10px;
  a {
  padding: 5px 0 5px 30px;
  background: url('/assets/add_teammembers.svg') no-repeat;
  background-position: left;
  a:hover {
    text-decoration: none;
   }
  }
}



/* miscellaneous */

.debug_dump {
  clear: both;
  float: left;
  width: 100%;
  margin-top: 45px;
  @include box_sizing;
}

